Fixes styling issue of toolbar buttons on Firefox.

--- a/views/css/main.scss
+++ b/views/css/main.scss
@@ -95,6 +95,7 @@ ol.toolbar {
         display: inline-block;
         line-height: 0;
         margin-left: 0.5rem;
+        vertical-align: top;
 
         button {
             height: 1.40rem;
